--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,85 @@
     transform: rotate(360deg);
   }
 }
+
+@media (min-width: 900px) {
+  .container, .container-lg, .container-md, .container-sm {
+      max-width: 1600px;
+  }
+}
+
+.app-container {
+  .header-container {
+    .btn-login {
+      border-radius: 5px;
+      margin-right: 15px;
+      padding: 5px 15px;
+      border: 1px solid #535353;
+    }
+    .btn-signup{
+      border-radius: 5px;
+      padding: 5px 15px;
+      background: #303030;
+      color: white;
+      &:hover{
+        background: black;
+      }
+    }
+    
+    .navbar {
+      padding-top: 20px;
+      z-index: 10;
+      /* opacity: 0.6; */
+      background-color: rgba(0, 0, 0, 0) !important;
+      .nav-link {
+        &.active {
+          color: #00bfff;
+        }
+      }
+    }
+  }
+}
+.app-container{
+  .header-container{
+
+  }
+  .homepage-container{
+    .homepage-content{
+      padding: 170px;
+      width: 50%;
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      
+    }
+    .title-1{
+      font-size: 40px;
+      font-weight: 600;
+    }
+    .title-2{
+      font-size: 25px;
+    }
+    .title-3{
+      button{
+        border-radius: 5px;
+        height: 40px;
+        font-weight: 500;
+        background-color: black;
+        border: none;
+        color:white;
+        &:hover{
+          background-color: #312d2d;
+        }
+      }
+    }
+  }
+}
+video {
+  position: fixed;
+  bottom: auto;
+  top: 100px;
+  right: 150px;
+  width: 35vw;
+  border-radius: 5px;
+}
