--- a/src/components/Admin/Admin.css
+++ b/src/components/Admin/Admin.css
@@ -13,7 +13,7 @@
             border: 1px solid green;
         }
         .admin-main{
-            
+            height: calc(100vh - 50px);
         }
     }
 }
