--- a/src/components/Auth/Login.css
+++ b/src/components/Auth/Login.css
@@ -9,9 +9,11 @@
 
     .header{
         height: 45px;
-        text-align: right;
+        display: flex;
+        justify-content: flex-end;
         padding: 5px 100px 0 100px;
-
+        gap: 10px;
+        align-items: center;
         button{
             padding: 3px 15px;
             margin-left: 15px;
