--- a/src/components/Auth/Register.css
+++ b/src/components/Auth/Register.css
@@ -1,8 +1,11 @@
 .register-container {
     .header {
         height: 45px;
-        text-align: right;
+        display: flex;
+        justify-content: flex-end;
         padding: 5px 100px 0 100px;
+        gap: 10px;
+        align-items: center;
 
         button {
             padding: 3px 15px;
